# minisora

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  README_ja.md  docker-compose.yml  pyproject.toml
scripts/: train.py
scripts/demo/: full_continuation.py  full_vgen.py
scripts/test/: test_qwem3.py  test_sd3.py  test_wan.py
src/minisora/: __init__.py  utils.py
src/minisora/data/: __init__.py  datasets.py  samplers.py
src/minisora/models/: __init__.py  build_dit.py  condition_mask.py  modeling_dit.py  pipeline_dit.py
src/minisora/train/: __init__.py  io.py  lr_scheduler.py  timer.py
